tests/src/frontend/typechecking/invalid/unbound_field_static.sk
class X(a: Int) {
  static fun b(): void {
    static::z
  }
}
